--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/easy/ID_24_MaximumDepthOfBinaryTree.java=UTF-8
+encoding//src/medium/ID_065_SearchInsertPosition.java=UTF-8
